# reinvent-wheel

./: .gitignore  Cargo.toml  HAND_CODING_TOPICS.md  Makefile  README.md  build.gradle.kts  gradlew  settings.gradle.kts
gradle/: libs.versions.toml
scripts/: bootstrap-gradle.sh  bootstrap-jdk.sh  bootstrap-python.sh  bootstrap-rust.sh  env.sh  list-projects.py  scaffold_catalog.py  scaffold_cpp_projects.py  scaffold_jvm_projects.py  scaffold_python_projects.py  scaffold_repo.py  scaffold_rust_projects.py  smoke-all.sh  verify-all.sh
toolchains/: versions.env
topics/01-mini-grep/: QA.md  README.md  SPEC.md
topics/02-key-value-store/: QA.md  README.md  SPEC.md
topics/03-http-server-router/: QA.md  README.md  SPEC.md
topics/04-json-parser/: QA.md  README.md  SPEC.md
topics/05-thread-pool-queue/: QA.md  README.md  SPEC.md
topics/06-mini-git-object-store/: QA.md  README.md  SPEC.md
topics/07-arena-allocator/: QA.md  README.md  SPEC.md
topics/08-tiny-async-executor/: QA.md  README.md  SPEC.md
topics/09-tiny-vector/: QA.md  README.md  SPEC.md
topics/10-expression-evaluator/: QA.md  README.md  SPEC.md
topics/11-file-log-library/: QA.md  README.md  SPEC.md
topics/12-di-container/: QA.md  README.md  SPEC.md
topics/13-jdbc-todo-cli/: QA.md  README.md  SPEC.md
topics/14-rate-limiter/: QA.md  README.md  SPEC.md
topics/15-coroutine-scheduler/: QA.md  README.md  SPEC.md
topics/16-notes-app-jvm/: QA.md  README.md  SPEC.md
topics/17-dsl-config-parser/: QA.md  README.md  SPEC.md
topics/18-dataset-profiler/: QA.md  README.md  SPEC.md
(+366 files in other folders)
